feat: create football team api
